--- a/bootstrap/bootstrap-project/Chart.yaml
+++ b/bootstrap/bootstrap-project/Chart.yaml
@@ -1,10 +1,8 @@
 apiVersion: v1
 appVersion: "v0.0.1"
-description: A Helm chart for deploying and managing Openshift projects 🦆
+description: A Helm chart for deploying and managing Openshift projects
 name: bootstrap-project
 version: 0.0.6
-home: https://github.com/rht-labs/charts
+home: https://github.com/rcarrata/gitops-charts
 maintainers:
-  - name: springdo
-  - name: ckavili
-  - name: eformat
+  - name: rcarrata
